tests/expectations/compiler/dynamic_dispatch/dynamic_read_of_mapping_fail.out
Error [ETYC0372156]: `balances` is a mapping; read a value with `test.aleo::Bank::balances.get(key)` or `.get_or_use(key, default)`.
    --> compiler-test:13:19
     |
  13 |     let v: u64? = Bank@(target)::balances;
     |                   ^^^^^^^^^^^^^^^^^^^^^^^
